# platform-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE_DESKTOP.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yaml
examples/: stdio_client_example.py
extracted_queries/: queries_catalog.csv  query_embeddings.npy  schema.graphql  update_headers_from_catalog.py
extracted_queries/credibleset/: CredibleSetPageQuery.gql  CredibleSetProfileHeaderFragment.gql  GWASColocQuery.gql  GWASColocSummaryFragment.gql  Locus2GeneQuery.gql  Locus2GeneQueryFragment.gql  MolQTLColocQuery.gql  MolQTLColocSummaryFragment.gql  VariantsQuery.gql  VariantsSummaryFragment.gql
extracted_queries/disease/: AssociatedTargetsQuery.gql  DiseaseAnnotation.gql  DiseaseAssociationsQuery.gql  DiseaseBibliography.gql  DiseaseGWASStudiesQuery.gql  DiseaseKnownDrugsQuery.gql  DiseaseKnownDrugsSummary.gql  DiseasePageQuery.gql  DiseaseProfileHeaderFragment.gql  DiseaseSimilarEntitiesQuery.gql  OTProjectsQuery.gql  OTProjectsSummaryFragment.gql  OntologyQuery.gql  OntologySummaryFragment.gql  PhenotypesQuery.gql  PhenotypesSummaryFragment.gql
extracted_queries/drug/: AdverseEventsQuery.gql  AdverseEventsSummaryFragment.gql  DrugAnnotation.gql  DrugBibliography.gql  DrugKnownDrugsQuery.gql  DrugKnownDrugsSummaryQuery.gql  DrugPageQuery.gql  DrugPharmacogenomicsQuery.gql  DrugProfileHeaderFragment.gql  DrugSimilarEntitiesQuery.gql  DrugWarningsQuery.gql  DrugWarningsSummaryFragment.gql  IndicationsQuery.gql  IndicationsSummaryFragment.gql  LinkedTargetsQuery.gql  LinkedTargetsSummaryFragment.gql  MechanismsOfActionQuery.gql  MechanismsOfActionSummaryFragment.gql  PharmacogenomicsSummaryFragment.gql
extracted_queries/evidence/: CancerBiomarkersEvidenceFragment.gql  CancerBiomarkersQuery.gql  CancerGeneCensusQuery.gql  CancerGeneCensusSummaryFragment.gql  ChemblQuery.gql  ChemblSummaryFragment.gql  ClinGenSummaryFragment.gql  ClingenQuery.gql  ClinvarQuery.gql  CrisprQuery.gql  CrisprScreenQuery.gql  CrisprScreenSummaryFragment.gql  CrisprSummaryFragment.gql  EVASummaryFragment.gql  EuropePMCQuery.gql  EuropePmcSummaryFragment.gql  EvaSomaticQuery.gql  EvaSomaticSummaryFragment.gql  EvidenceGWASCredibleSetsSummaryFragment.gql  EvidencePageQuery.gql  ExpressionAtlasQuery.gql  ExpressionAtlasSummary.gql  ExpressionAtlasSummaryFragment.gql  Gene2PhenotypeQuery.gql  Gene2PhenotypeSummaryFragment.gql  GeneBurdenQuery.gql  GeneBurdenSummaryFragment.gql  GenomicsEnglandQuery.gql  GenomicsEnglandSummaryFragment.gql  GwasCredibleSetsQuery.gql  IMPCSummaryFragment.gql  ImpcQuery.gql  IntOgenQuery.gql  IntOgenSummaryFragment.gql  OTCrisprQuery.gql  OTCrisprSummaryFragment.gql  OTEncoreQuery.gql  OTEncoreSummaryFragment.gql  OTValidationQuery.gql  OTValidationSummaryFragment.gql  (+15 more)
extracted_queries/search/: SearchAnnotation.gql  SearchAssocs.gql  SearchPageQuery.gql
extracted_queries/study/: QTLCredibleSetsSummaryFragment.gql  SharedTraitStudiesQuery.gql  SharedTraitStudiesSummaryFragment.gql  StudyGWASCredibleSetsQuery.gql  StudyGWASCredibleSetsSummaryFragment.gql  StudyGWASStudiesQuery.gql  StudyPageQuery.gql  StudyProfileHeaderQuery.gql  StudyQTLCredibleSetsQuery.gql
extracted_queries/variant/: EVAQuery.gql  EVASummary.gql  IntervalsQuery.gql  IntervalsSummaryFragment.gql  MolecularStructureQuery.gql  QTLCredibleSetsSummary.gql  UniProtVariantsQuery.gql  UniProtVariantsSummaryQuery.gql  VariantEffectPredictorQuery.gql  VariantEffectPredictorSummary.gql  VariantEffectQuery.gql  VariantEffectSummary.gql  VariantGWASCredibleSetsQuery.gql  VariantGWASCredibleSetsSummary.gql  VariantMolecularStructureSummary.gql  VariantPageQuery.gql  VariantPharmacogenomicsQuery.gql  VariantPharmacogenomicsSummary.gql  VariantProfileHeaderFragment.gql  VariantQTLCredibleSetsQuery.gql
mappers/: category_descriptors.json  category_query_mapper.json  query_category_mapper.json
src/open_targets_platform_mcp/: __init__.py  __main__.py  cli.py  config.py  create_server.py  mcp_instance.py  server.py  settings.py  types.py
src/otar_mcp/: cli.py  config.py  (+2 more)
test/: __init__.py  conftest.py  test_config.py  test_server.py
tests/: conftest.py  test_config.py  test_server.py
utils_scripts/: annotate_schema_metadata.py  sync_queries_catalog.py
(+53 files in other folders)
