[project]
name = "platform-mcp"
version = "0.0.1"
description = "Official implementation of Open Targets Platform MCP"
authors = [
    { name = "Francesco Carli", email = "carli@ebi.ac.uk" },
    { name = "Paul Ka Po To", email = "kto@ebi.ac.uk" },
]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.10,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.13.0.2",
    "gql[requests]>=4.0.0",
    "pydantic>=2.12.4",
    "click>=8.0.0",
    "jq>=1.10.0",
    "rank-bm25>=0.2.2",
]

[project.scripts]
platform-mcp = "platform_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/opentargets/platform-mcp"
Repository = "https://github.com/opentargets/platform-mcp"
Documentation = "https://github.com/opentargets/platform-mcp"

[dependency-groups]
dev = ["pytest>=7.2.0", "ruff>=0.11.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/platform_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 80

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"test/*" = ["S101", "D100", "D101", "D102", "D103", "D104", "SLF001"]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
# strict on main code, standard on test to allow private method access
typeCheckingMode = "standard"
strict = ["open_targets", "scripts"]
