[project]
name = "open-targets-platform-mcp"
version = "0.0.1"
description = "Official implementation of Model Context Protocol for Open Targets Platform"
authors = [
    { name = "Francesco Carli", email = "carli@ebi.ac.uk" },
    { name = "Paul Ka Po To", email = "kto@ebi.ac.uk" },
]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.10,<3.14"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed"
]
dependencies = [
    "fastmcp>=2.13.0.2",
    "gql[requests]>=4.0.0",
    "pydantic>=2.12.4",
    "jq>=1.10.0",
    "typer>=0.20.0",
]

[project.scripts]
open-targets-platform-mcp = "open_targets_platform_mcp.cli:main"
otp-mcp = "open_targets_platform_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/opentargets/open-targets-platform-mcp"
Repository = "https://github.com/opentargets/open-targets-platform-mcp"
Documentation = "https://github.com/opentargets/open-targets-platform-mcp"

[dependency-groups]
dev = ["pytest>=7.2.0", "ruff>=0.11.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/platform_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 80

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"test/*" = ["S101", "D100", "D101", "D102", "D103", "D104", "SLF001"]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
# strict on main code, standard on test to allow private method access
typeCheckingMode = "standard"
strict = ["open_targets", "scripts"]
